deploy: defa-ekky1073/personal-website@e08fec9b7dd5132b1d55b5b5d3f8969a994b1a14

--- a/css/custom.css
+++ b/css/custom.css
@@ -318,7 +318,13 @@
 /* Responsive adjustments */
 @media (max-width: 768px) {
     .nav #menu {
-        margin-top: -1rem;
+        margin-top: 0rem;
+        justify-content: space-around;
+        width: 100%;
+    }
+
+    .nav .logo {
+        display: none;
     }
 
     .profile-header {
