deploy: defa-ekky1073/personal-website@852c5031428121cba8de999acdf4a66b1cac6c34

--- a/css/custom.css
+++ b/css/custom.css
@@ -399,6 +399,18 @@
         display: none;
     }
 
+    .post-header {
+        display: none;
+    }
+
+    .page-header {
+        padding-top: 0.1rem;
+    }
+
+    .post-single {
+        padding-top: 1rem;
+    }
+
     .profile-header {
         padding: 1.5rem 1rem;
         margin-top: 2rem;
