deploy: defa-ekky1073/personal-website@eed3d8c22dfde4ec5c1a270273717071438e7749

--- a/css/custom.css
+++ b/css/custom.css
@@ -177,6 +177,11 @@
     margin-top: 2rem;
 }
 
+/* Main Content Width */
+:root {
+    --main-width: 1000px; /* Increased from default ~1000px */
+}
+
 /* Pagination */
 .pagination {
     display: flex;
